20120922	Fixing an ARM instruction encoding bug: for shifter_operand
		immediates, the carry bit should be set to bit 31 of the
		shifter_operand if and only if rotate_imm != 0. I've added
		detection for the case when this would bug out (although I
		have never seen it happen yet), and fixed a bug which did
		happen: for short register formats (i.e. no shift or other
		complex things), the code should not be run, but it was run
		anyway, leading to wrong Carry flag results for e.g. the TST
		instruction. This was triggered when running int64_t modulo.
20130907	Updating NetBSD/dreamcast test instructions: 5.1 -> 6.1.1.
		Updating NetBSD/pmax install instructions: 5.1.1 -> 6.1.1.
20131006	Adding a dummy Raspberry Pi machine mode.
20131109	Updating OpenBSD/landisk install instructions: 5.0 -> 5.4.
20140803	Some cleanup and minor progress of the Dreamcast PVR graphics.
		(The graphics displayed when attempting to run the original
		ROM now looks more reasonable.)
		Updating NetBSD/dreamcast test instructions: 6.1.1 -> 6.1.4.
		Updating NetBSD/pmax install instructions: 6.1.1 -> 6.1.4.
		Renaming machine mvme187 to mvme187old to avoid collision.
		Enabling ELF file support for 88K experiments.
20140805	Fixing color bug in dev_pvr.cc simpleline, which is used when
		rendering Gouraud shaded triangles.
20140810	Beginning on disassembly of ARM THUMB (16-bit) encoding.
20140815	Adding rudimentary culling of clockwise / counter-clockwise
		polygons in the PVR rendering code.
20140816	Fixing console.cc so that it doesn't complain about buffer
		overrun when pasting a lot of data.

==============  RELEASE 0.6.0.1  ==============

20150312	Making old framework config files work again (@filename).
20180203	Reviving the (dummy) Luna 88K machine mode from r5458.
20180204	Continuing on LUNA 88K stuff; some initial fake PROM putchar
		functionality for experimenting with OpenBSD/luna88k.
20180205	Some initial OpenBSD/luna88k syscnputc() output works (hack).